--- a/src/app/slideshow/slideshow.page.html
+++ b/src/app/slideshow/slideshow.page.html
@@ -1,24 +1,9 @@
 <ion-header>
-  <ion-toolbar color="danger">
-    <ion-title>Play</ion-title>
-    
-    <ion-buttons slot="start">
-      <ion-button (click)="playPhotos()">
-        <ion-icon slot="icon-only" name="refresh"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    
-    <ion-buttons slot="end">
-      <ion-button (click)="close()">
-        <ion-icon slot="icon-only" name="close"></ion-icon>
-      </ion-button>
-
-    </ion-toolbar>
-  </ion-buttons>
+  <ion-toolbar>
+    <ion-title>Slideshow</ion-title>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="image-container">
-    <img [src]="imageSrc">
-  </div>
+
 </ion-content>
