snap-L04-taking pics - basics for taking pics (w)

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,36 @@
+<!-- <img [src]="sanitizer.bypassSecurityTrustResourceUrl(photo.path)"> -->
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="danger">
     <ion-title>
-      Ionic Blank
+      <img src="assets/images/logo.png" alt="logo" />
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="playSlideshow()">
+        <ion-icon slot="icon-only" name="play"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <ion-list lines="none">
+    <ion-item *ngIf="!photoService.photoTaken" button (click)="takePhoto()">
+      <img src="assets/images/smile.png" alt="smile button" />
+    </ion-item>
+    
+    <ion-item-sliding *ngFor="let pic of photoService.pics">
+      <ion-item>
+        <img src="https://placehold.it/100x100" />
+        <ion-badge slot="end" color="light">
+          2 days ago
+        </ion-badge>
+      </ion-item>
+
+      <ion-item-options>
+        <ion-item-option button color="danger" (click)="deletePhoto(pic)">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
